
syntax = "proto3";
option go_package = "github.com/tamararankovic/microservices_demo/common/reservations";

package reservations;


import "google/api/annotations.proto";

service ReservationService{
  rpc Get(GetRequest) returns(GetResponse) {
    option (google.api.http) = {
      get: "/reservations/reservation/{id}"
    };
  }
  rpc GetAll(GetAllRequest) returns(GetAllResponse) {
    option (google.api.http) = {
      get: "/reservations/reservation"
    };
  }

  rpc GetAllByAccommodation(GetAllByAccommodationRequest) returns(GetAllByAccommodationResponse) {
    option (google.api.http) = {
      get: "/reservations/accommodation/{id}"
    };
  }
  rpc GetAllByAccommodationConfirmed(GetAllByAccommodationRequest) returns(GetAllByAccommodationResponse) {
    option (google.api.http) = {
      get: "/reservations/accommodation-confirmed/{id}"
    };
  }
  rpc GetAllByGuest(GetAllByGuestRequest) returns(GetAllByAccommodationResponse) {
    option (google.api.http) = {
      get: "/reservations/guest/{id}"
    };
  }
  rpc GetAllByGuestPending(GetAllByGuestRequest) returns(GetAllByAccommodationResponse) {
    option (google.api.http) = {
      get: "/reservations/guest-pending/{id}"
    };
  }
  rpc MakeRequestForReservation(ReservationRequest) returns (ReservationRequestResponse){
    option (google.api.http) = {
      post: "/reservations/reservation-request"
      body:"*"
    };
  }
  rpc CancelReservation(CancelReservationRequest) returns (CancelReservationResponse){
    option (google.api.http) = {
      get: "/reservations/cancel-request/{id}"
    };
  }
  rpc ConfirmReservationManually(ConfirmReservationManuallyRequest) returns (ConfirmReservationManuallyResponse){
    option (google.api.http) = {
      post: "/reservations/manually-confirm"
      body:"*"
    };
  }
  rpc CancelReservationManually(CancelReservationManuallyRequest) returns (CancelReservationManuallyResponse){
    option (google.api.http) = {
      post: "/reservations/manually-cancel"
      body:"*"
    };
  }
  rpc ConfirmReservationAutomatically(ReservationRequest) returns (ConfirmReservationAutomaticallyMessage){
    option (google.api.http) = {
      post: "/reservations/automatically-confirm"
      body:"*"
    };
  }

  rpc HasActiveReservations(HasActiveReservationsRequest) returns (HasActiveReservationsResponse) {
    option (google.api.http) = {
      get: "/reservations/active-reservations/{id}"
    };
  }
  rpc GetAllFuture(GetAllFutureRequest) returns(GetAllFutureResponse) {
    option (google.api.http) = {
      get: "/reservations/future"
    };
  }
  rpc DeleteReservationRequestGuest(DeleteReservationRequest) returns (DeleteReservationResponse){
    option (google.api.http) = {
      post: "/reservations/delete-reservation-request"
      body:"*"
    };
  }
  rpc TermCheck(TermCheckRequest) returns (TermCheckResponse){
    option (google.api.http) = {
      post: "/reservations/term-check"
      body:"*"

    };
  }
  rpc CheckReservationRequirementsHost(ReservationRequirementsHostRequest) returns (ReservationRequirementsHostResponse){
    option (google.api.http) = {
      get: "/reservations/host-req"
      

    };
  }

  rpc GetAccommodationsReservedInTimePeriod(GetAccTimePeriodRequest) returns (GetAccTimePeriodResponse){
    option (google.api.http) = {
      get: "/reservations/reservation-period"


    };
  }
}
message GetAccTimePeriodRequest{
  string startDate = 1;
  string endDate = 2;
}
message GetAccTimePeriodResponse{
  repeated string accommodationIds = 1;
}
message ReservationRequirementsHostRequest{
  string hostId = 1;
}
message ReservationRequirementsHostResponse{
  bool isPossible = 1;
}
message TermCheckRequest{
  string id = 1;
  string startdate = 2;
  string endDate = 3;

}
message TermCheckResponse{
  string hasReservation = 1;


}

message GetRequest {
  string id = 1;
}

message ReservationRequest {
  string id  = 1;
  string AccommodationID = 2;
  string  StartDate = 3;
  string EndDate = 4;
  string GuestNumber = 5;
  string  Confirmation = 6;
  string GuestId = 7;
  string minGuest = 8;
  string maxGuest = 9;
  string HostId = 10;


}

message CancelReservationRequest {
  string id = 1;
}
message CancelReservationManuallyRequest{
  string id = 1;
  string accommodationId = 2;
}
message CancelReservationManuallyResponse{
  string id = 1;

}
message ConfirmReservationManuallyRequest{
  string id = 1;
  string accommodationId = 2;
}
message ConfirmReservationManuallyResponse{
  string id = 1;
}
message CancelReservationResponse {
  string id = 1;
  string isDeleted = 2;
}

message ConfirmReservationAutomaticallyMessage{
 string id = 1;
}

message GetResponse {
  Reservation reservation = 1;
}

message GetAllRequest {
}

message GetAllResponse {
  repeated Reservation reservations = 1;
}
message GetAllFutureRequest {
}

message GetAllFutureResponse {
  repeated Reservation reservations = 1;
}

message ReservationRequestResponse{
  string id = 1;

}
message Reservation {
  string id = 1;
  string accommodationID = 2;
  string  startDate = 3;
  string endDate = 4;
  int64 guestNumber = 5;
  bool  isConfirmed = 6;
  string guestId = 7;
  int64 minGuest = 8;
  int64 maxGuest = 9;
  string reservationStatus =10;
}

message ReservationDTO {
   string id  = 1;
   string accommodationID = 2;
   string  startDate = 3;
   string endDate = 4;
  int64 guestNumber = 5;
  bool  isConfirmed = 6;
  int64 minGuest = 8;
  int64 maxGuest = 9;

}
message DeleteReservationRequest{
  string id =1;
}
message GetAllByAccommodationRequest{
  string id = 1;
}
 message GetAllByAccommodationResponse {
   repeated Reservation reservations = 1;
 }

message GetAllByGuestRequest{
  string id =1 ;
}


message HasActiveReservationsRequest {
  string id = 1;
}

message HasActiveReservationsResponse {
  bool hasReservations=1;
}


message DeleteReservationResponse{
  string id = 1;
}

